--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--meta tags for search engines-->
+    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
+    <meta name="keywords" content="running, runners, Dublin, Ireland, urban running, trail running, running club, fitness, health">
     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
