--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <!--Header section of the page -->
@@ -19,7 +21,7 @@
 
     <!--Main content area -->
     <main> Main Content</main>
-    
+
     <!--Footer section of the page -->
     <footer>Footer</footer>
     
