add log and font to h1

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
 </head>
 <body>
     <!--Header section of the page -->
-    <header>Header</header>
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Love Running</h1>
+        </a>
+        
+    </header>
 
     <!--Main content area -->
     <main> Main Content</main>
