--- a/signup.html
+++ b/signup.html
@@ -41,23 +41,24 @@
     <!-- Main content -->
     <main>
         <section id="signup">
-            <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
+            <form id="signup-form" method="POST" action="https://formdump.codeinstitue.net">
                 <h2><i class="fa-solid fa-heartbeat"></i> Let's get you signed up!</h2>
-                <label for="first-name">First Name</label>
+                <label for="first-name">First name</label>
                 <input type="text" name="first_name" id="first-name" class="text-input" required>
                 <br>
-                <label for="last-name">Last Name</label>
+                <label for="last-name">Last name</label>
                 <input type="text" name="last_name" id="last-name" class="text-input" required>
                 <br>
                 <label for="email-address">Email Address</label>
                 <input type="email" name="email_address" id="email-address" class="text-input" required>
                 <br>
                 <div class="radio-buttons">
-                    <div>
-                        <label for="road">Road</label>
-                        <input type="radio" name="running_preference" id="road" value="road" required checked>
-                    </div>
-                    <div>
+                <div>
+                    <label for="road">Road</label>
+                    <input type="radio" name="running_preference" id="road" value="road" required checked>
+
+                </div>
+                <div>
                         <label for="trail">Trail</label>
                         <input type="radio" name="running_preference" id="trail" value="trail" required>
                     </div>
@@ -67,6 +68,8 @@
                     </div>
                 </div>
                 <button type="submit" class="join-button">Let's Run!</button>
+                </div>
+
             </form>
         </section>
     </main>
